--- a/Klipper/config/tools/tool_0.cfg
+++ b/Klipper/config/tools/tool_0.cfg
@@ -55,3 +55,44 @@ heater_temp: 100.0
 #shutdown_speed: 0
 #kick_start_time: 0.1
 #off_below: 0.10
+
+[atc_switch td0]
+pin:!EBB0: PB4
+press:
+   #M118 t0_dock PRESSED
+   RESET_DELAY_AND_CHECK_MACHINE_STATUS
+release:
+   #M118 t0_dock RELEASE
+   RESET_DELAY_AND_CHECK_MACHINE_STATUS
+
+
+[atc_switch tc0]
+pin:!EBB0: PB7
+press:
+   #M118 t0_carriage PRESSED
+   RESET_DELAY_AND_CHECK_MACHINE_STATUS
+release:
+   #M118 t0_carriage RELEASE
+   RESET_DELAY_AND_CHECK_MACHINE_STATUS
+
+[neopixel t0_led]
+pin: EBB0:PD3
+chain_count: 1
+color_order: GRB
+initial_RED: 0.0
+initial_GREEN: 0.0
+initial_BLUE: 0.0
+
+#[tool_probe T0]
+# pin: EBB0:PB8
+# tool: 0
+# x_offset: 0.0
+# y_offset: 0.0
+# z_offset: 0
+# speed: 10
+# samples: 3
+# samples_result: median
+# sample_retract_dist: 5
+# samples_tolerance: 0.075
+# samples_tolerance_retries: 3
+
