--- a/Klipper/config/tools/tool_1.cfg
+++ b/Klipper/config/tools/tool_1.cfg
@@ -1,1 +1,97 @@
+[mcu EBB1]
+serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_150041001550425539393020-if00
+
+[adxl345 adxl_t1]
+cs_pin: EBB1: PB12
+spi_software_sclk_pin: EBB1: PB10
+spi_software_mosi_pin: EBB1: PB11
+spi_software_miso_pin: EBB1: PB2
+axes_map: y,-x,z
+
+[extruder1]
+step_pin: EBB1: PD0
+dir_pin: !EBB1: PD1
+enable_pin: !EBB1: PD2
+rotation_distance: 22.25 #for 5mm Shaft Driven Bondtech gearsets
+gear_ratio: 50:10 #for standard 10t motor
+microsteps: 64
+full_steps_per_rotation: 200 #1.8deg Motor
+nozzle_diameter: 0.600
+filament_diameter: 1.750
+heater_pin: EBB1: PB13
+sensor_type: ATC Semitec 104NT-4-R025H42G
+sensor_pin: EBB1: PA3
+min_temp: -200
+max_temp: 300
+max_extrude_only_distance:100
+pressure_advance: 0.035
+pressure_advance_smooth_time: 0.040
+control: pid
+pid_Kp: 21.527
+pid_Ki: 1.063
+pid_Kd: 108.982
+
+[tmc2209 extruder1]
+uart_pin: EBB1: PA15
+run_current: 0.450
+interpolate: False
+sense_resistor: 0.110
+stealthchop_threshold: 0
+
+[fan_generic partfan_t1]
+pin: EBB1: PA0
+max_power: 1
+shutdown_speed: 0
+kick_start_time: 0.1
+off_below: 0.10
+
+[heater_fan hotend_fan_t1]
+pin: EBB1: PA1
+heater: extruder1
+heater_temp: 100.0
+max_power: 1
+shutdown_speed: 0
+kick_start_time: 0.1
+off_below: 0.10
+
+[neopixel t1_led]
+ pin: EBB1:PD3
+ chain_count: 1
+ color_order: GRB
+ initial_RED: 0
+ initial_GREEN: 0.0
+ initial_BLUE: 0.0
+
+[atc_switch td1]
+ pin:!EBB1: PB3
+ press:
+    #M118 t1_dock PRESSED
+    RESET_DELAY_AND_CHECK_MACHINE_STATUS
+ release:
+    #M118 t1_dock RELEASE
+    RESET_DELAY_AND_CHECK_MACHINE_STATUS
+
+[atc_switch tc1]
+ pin:!EBB1: PB7
+ press:
+    #M118 t1_carriage PRESSED
+    RESET_DELAY_AND_CHECK_MACHINE_STATUS
+ release:
+    #M118 t1_carriage RELEASE
+    RESET_DELAY_AND_CHECK_MACHINE_STATUS
+
+
+#[tool_probe T1]
+#pin: EBB1:PB8
+#tool: 1
+#x_offset: 0.0
+#y_offset: 0.0
+#z_offset: 0
+#speed: 10
+#samples: 1
+#samples_result: median
+#sample_retract_dist: 5
+#samples_tolerance: 0.075
+#samples_tolerance_retries: 3
+
 
