--- a/Klipper/config/printer.cfg
+++ b/Klipper/config/printer.cfg
@@ -1,169 +1,135 @@
-[include mainsail.cfg]
+
+
+# This file contains common pin mappings for the BigTreeTech GTR.
+# To use this config, the firmware should be compiled for the
+# STM32F407 with a "32KiB bootloader".
+
+# The "make flash" command does not work on the GTR. Instead,
+# after running "make", copy the generated "klipper/out/klipper.bin" file to a
+# file named "firmware.bin" on an SD card and then restart the GTR
+# with that SD card.
+
+# See docs/Config_Reference.md for a description of parameters.
+
+[gcode_macro DUMP_PARAMS]
+gcode:
+  {action_respond_info(rawparams)}
+
+[include fluidd.cfg]
+#[include adxl.cfg]
+
+#[skew_correction]
+
+[exclude_object]
+[respond]
+
+[gcode_arcs]
+
+[force_move]
+enable_force_move=1
+
+
+[input_shaper]
+
+[pause_resume]
+
+[display_status]
+
+[exclude_object]
+
+[virtual_sdcard]
+path: /home/pi/printer_data/gcodes
+
+[display_status]
+
+[pause_resume]
+
+
+#[gcode_macro _CLIENT_VARIABLE]
+#gcode:
+#  variable_use_custom_pos: True
+#  variable_custom_park_x: 150.0  # Adjust this value
+#  variable_custom_park_y: 10.0   # Adjust this value
+#  variable_custom_park_dz: 2.0   # Adjust if needed
+#  variable_speed_move: 100.0    # Move speed in mm/s
+
+
+[gcode_macro _CLIENT_VARIABLE]
+variable_use_custom_pos   : True ; use custom park coordinates for x,y [True/False]
+variable_custom_park_x    : 20.0   ; custom x position; value must be within your defined min and max of X
+variable_custom_park_y    : 20.0   ; custom y position; value must be within your defined min and max of Y
+variable_custom_park_dz   : 2.0   ; custom dz value; the value in mm to lift the nozzle when move to park position
+variable_retract          : 1.0   ; the value to retract while PAUSE
+variable_cancel_retract   : 5.0   ; the value to retract while CANCEL_PRINT
+variable_speed_retract    : 35.0  ; retract speed in mm/s
+variable_unretract        : 1.0   ; the value to unretract while RESUME
+variable_speed_unretract  : 35.0  ; unretract speed in mm/s
+variable_speed_hop        : 15.0  ; z move speed in mm/s
+variable_speed_move       : 100.0 ; move speed in mm/s
+variable_park_at_cancel   : False ; allow to move the toolhead to park while execute CANCEL_PRINT [True/False]
+variable_park_at_cancel_x : None  ; different park position during CANCEL_PRINT [None/Position as Float]; park_at_cancel must be True
+variable_park_at_cancel_y : None  ; different park position during CANCEL_PRINT [None/Position as Float]; park_at_cancel must be True
+## !!! Caution [firmware_retraction] must be defined in the printer.cfg if you set use_fw_retract: True !!!
+variable_use_fw_retract   : False ; use fw_retraction instead of the manual version [True/False]
+variable_idle_timeout     : 0     ; time in sec until idle_timeout kicks in. Value 0 means that no value will be set or restored
+variable_runout_sensor    : ""    ; If a sensor is defined, it will be used to cancel the execution of RESUME in case no filament is detected.
+##                                   Specify the config name of the runout sensor e.g "filament_switch_sensor runout". Hint use the same as in your printer.cfg
+## !!! Custom macros, please use with care and review the section of the corresponding macro.
+## These macros are for simple operations like setting a status LED. Please make sure your macro does not interfere with the basic macro functions.
+## Only  single line commands are supported, please create a macro if you need more than one command.
+variable_user_pause_macro : ""    ; Everything inside the "" will be executed after the klipper base pause (PAUSE_BASE) function
+variable_user_resume_macro: ""    ; Everything inside the "" will be executed before the klipper base resume (RESUME_BASE) function
+variable_user_cancel_macro: ""    ; Everything inside the "" will be executed before the klipper base cancel (CANCEL_PRINT_BASE) function
+gcode:
+
+
+
+
+
+
+
 
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_15000E001250335331383820-if00
 
-[force_move]
-enable_force_move: True
-
-
 [printer]
+max_velocity: 400
+max_accel: 12000
 kinematics: corexy
-max_velocity: 300
-max_accel: 3300 #10000                         #Max 4000
-max_accel_to_decel: 3300 #10000 #3200                         #Max 4000
-max_z_velocity: 15
-max_z_accel: 50
+max_z_velocity: 300
+max_z_accel: 400
 square_corner_velocity: 5.0
 
 
-#####################################################################
-#       X/Y Stepper Settings
-#####################################################################
-
-[stepper_x]
-##  B Stepper - Left
-##      Connected to MOTOR_0
-##  Endstop connected to DIAG_0
-step_pin: PF13
-dir_pin: PF12
-enable_pin: !PF14
-rotation_distance: 40
-microsteps: 16
-full_steps_per_rotation:400  #set to 400 for 0.9 degree stepper
-endstop_pin: PG6
-position_min: 0
-position_endstop: 350
-position_max: 350
-       
-##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
-homing_retract_dist: 5
-homing_positive_dir: true
-
-##      Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_x]
-uart_pin: PC4
-interpolate: True
-run_current: 1.05 #0.9
-hold_current: 0.7
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-[stepper_y]
-##  A Stepper - Right
-##  Connected to MOTOR_1
-##  Endstop connected to DIAG_1
-step_pin: PG0
-dir_pin: PG1
-enable_pin: !PF15
-rotation_distance: 40
-microsteps: 16
-full_steps_per_rotation:400  #set to 400 for 0.9 degree stepper
-endstop_pin: PG9
-position_min: 0
-position_endstop: 0
-position_max: 550
-homing_speed: 25  #Max 100
-homing_retract_dist: 5
-homing_positive_dir: false
-
-##      Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_y]
-uart_pin: PD11
-interpolate: True
-run_current: 1.05 #0.9
-hold_current: 0.7
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-#####################################################################
-#       Z Stepper Settings
-#####################################################################
-
-## Z0 Stepper - Left Z Motor
-## Z Stepper Socket
-##  Endstop connected to DIAG_2
-[stepper_z]
-step_pin: PF11
-dir_pin: !PG3
-enable_pin: !PG5
-homing_positive_dir: false
-# Rotation Distance for TR8x8 = 8, TR8x4 = 4, TR8x2 = 2
-rotation_distance: 4
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-endstop_pin: PG10
-## All builds use same Max Z
-position_max: 250
-position_min: -2.5
-position_endstop = -0.050
-##--------------------------------------------------------------------
-homing_speed: 8.0 # Leadscrews are slower than 2.4, 10 is a recommended max.
-second_homing_speed: 3
-homing_retract_dist: 3
-
-##      Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_z]
-uart_pin: PC6
-interpolate: true
-run_current: 0.8
-hold_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-##      Z1 Stepper - Rear Z Motor
-##      E0 Stepper Socket
-[stepper_z1]
-step_pin: PG4
-dir_pin: !PC1
-enable_pin: !PA0
-## Remember to mirror these changes in stepper_z and stepper_z2! (there are three motors)
-rotation_distance: 4
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-
-##      Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_z1]
-uart_pin: PC7
-interpolate: true
-run_current: 0.8
-hold_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-##      Z2 Stepper - Right Rear Z Motor
-##      E1 Stepper Socket
-[stepper_z2]
-step_pin: PF9
-dir_pin: PF10
-enable_pin: !PG2
-## Remember to mirror these changes in stepper_z and stepper_z1! (there are three motors)
-rotation_distance: 4
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-
-[tmc2209 stepper_z2]
-uart_pin: PF2
-interpolate: true
-run_current: 0.8
-hold_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 0
+[input_shaper]
+shaper_freq_x: 38.2
+shaper_type_x: ei
+shaper_freq_y: 34.8
+shaper_type_y: mzv
 
 
-[probe]
-pin: PG12
-x_offset: 0
-y_offset: 25.0
-z_offset: -3
-speed: 10.0
-samples: 3
-samples_result: median
-sample_retract_dist: 3.0
-samples_tolerance: 0.006
-samples_tolerance_retries: 3
+[include motors.cfg]
+
+[tool_probe_endstop]
+
+[include calibrate-offsets.cfg]
+
+[fan_generic RSCS]
+##  RSCS Fans - In FAN1 Positon
+pin: PD13
+max_power: 1
+shutdown_speed: 0
+kick_start_time: 0.1
+off_below: 0.10
+
+[controller_fan driver_fan]
+pin:PD12
+max_power:0.5
+shutdown_speed: 0
+kick_start_time: 0.1
+off_below: 0.10
+stepper:stepper_x, stepper_y
 
 
 #####################################################################
@@ -171,9 +137,16 @@ samples_tolerance_retries: 3
 #####################################################################
 
 [heater_bed]
+##  SSR Pin - HE1
+##  Thermistor - TB
 heater_pin: PA1
+## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
+## Use "Generic 3950" for Keenovo heaters
 sensor_type: Generic 3950
 sensor_pin: PF3
+##  Adjust max_power so it doesn't exceed the SSR rating. The Omron G3NA-210B-DC5 SSR is rated at 4 amps without a heatsink.
+##  The formula is "4 / (Wattage_of_bed_heater / Mains_voltage) = max_power"
+##  If max_power is greater than 1.0, use 1.0
 max_power: 0.6
 min_temp: 0
 max_temp: 120
@@ -182,69 +155,162 @@ pid_kp: 58.437
 pid_ki: 2.347
 pid_kd: 363.769
 
+[verify_heater heater_bed]
+max_error: 180
+check_gain_time: 180
+heating_gain: 2
+
 #####################################################################
-#   Homing override
+#       Probe
 #####################################################################
 
+
+
+#######################################
+#### Enclosure Temp Sensor Section ####
+#######################################
+
+[temperature_sensor raspberry_pi]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100
+
+[temperature_sensor octopus]
+sensor_type: temperature_mcu
+min_temp: 10
+max_temp: 100
+
+[neopixel cled]
+##      To control Neopixel RGB in mini12864 display
+pin: PB6
+chain_count:60
+initial_RED: 1
+initial_GREEN: 1
+initial_BLUE: 1
+color_order:GRB
+
+[idle_timeout]
+timeout: 1800
 
 [homing_override]
-axes: xyz
+axes: z
+set_position_z: 0
 gcode:
-    {% set home_all = 'X' not in params and 'Y' not in params and 'Z' not in params %}
-    {% if home_all or 'Y' in params %}
-        G28 Y
+    {% if printer["gcode_macro VARIABLES_LIST"].tc_state|int == 0 %}
+      G90
+      G0 Z10 F250
+      G0 X200 Y380 F6000
+      G28 Z0
+      G0 Z25 F250
+      G0 X200 Y250 F6000
+    {% else %}
+      M118 "Tool Changer in error state. Unable to continue."
     {% endif %}
-    {% if home_all or 'X' in params %}
-        G28 X
-    {% endif %}
-    G0 X103 Y334 F6000
-    {% if home_all or 'Z' in params %}
-        G28 Z
-    {% endif %}
-
-
-[include toolchanger.cfg]
-
-
-[include toolchanger.cfg]
-
 
 [z_tilt]
+#xmin: -65
+#xmax: 485
+#ymin: -95
+#ymax: 455 
 z_positions:
-    -50, 340
-    405,340
-    405,-24
+    -65,-95
+    -65,455
+    455,-95
+    455,455
+    #210,455
+
+
 points:
-       40, 5
-       165, 265
-       290, 5
-speed: 300
-horizontal_move_z: 10
+    30,20
+    #30,280
+    365,20
+    #365,280
+    175,280
+
+
+
+speed: 50
+horizontal_move_z: 20
 retries: 5
 retry_tolerance: 0.01250
 
 
 [bed_mesh]
-speed: 300
-horizontal_move_z: 5
-mesh_min: 30,20
-mesh_max: 290,265
+speed: 100
+horizontal_move_z: 12
+mesh_min: 30,50
+mesh_max: 340,290
 fade_end: 10.0
 probe_count: 5,5
 algorithm: bicubic
-zero_reference_position:150,150
+zero_reference_position:170,145
 #relative_reference_index: 12
 
 
-[include macros.cfg]
+[include gcode_macros.cfg]
 
+[include toolchanger.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-
-
-
-
-
-
+#*# [extruder]
+#*#
+#*# [extruder1]
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.166788, 0.113212, 0.209462, 0.048837, -0.221163
+#*# 	  -0.108038, -0.003663, 0.090087, -0.108663, -0.383038
+#*# 	  0.003212, -0.061163, -0.049288, -0.274288, -0.453038
+#*# 	  0.085087, -0.034913, -0.091163, -0.371163, -0.624288
+#*# 	  0.135087, -0.037413, -0.235538, -0.480538, -0.766163
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 340.0
+#*# min_y = 50.0
+#*# max_y = 290.0
+#*#
+#*# [bed_mesh 80.0C]
+#*# version = 1
+#*# points =
+#*# 	-0.219518, -0.117599, -0.074781, -0.090461, -0.223136
+#*# 	-0.122423, -0.051261, 0.041612, 0.019298, -0.079002
+#*# 	-0.150768, -0.051261, 0.000000, 0.044024, -0.074178
+#*# 	-0.232785, -0.186952, -0.124836, -0.169463, -0.262336
+#*# 	-0.446272, -0.371491, -0.329879, -0.380537, -0.578344
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 15.0
+#*# max_x = 310.0
+#*# min_y = 15.0
+#*# max_y = 270.0
+#*#
+#*# [bed_mesh 65.0C]
+#*# version = 1
+#*# points =
+#*# 	0.045379, -0.034226, -0.082472, -0.008897, 0.014020
+#*# 	-0.007691, -0.022165, 0.022463, 0.014020, 0.156344
+#*# 	0.033318, 0.056234, -0.007691, 0.182879, 0.302287
+#*# 	0.057441, -0.010103, 0.023669, 0.190116, 0.345708
+#*# 	-0.157252, -0.153634, -0.035432, 0.111717, 0.214239
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 290.0
+#*# min_y = 20.0
+#*# max_y = 265.0
