--- a/Klipper/config/consolidate_pause.cfg
+++ b/Klipper/config/consolidate_pause.cfg
@@ -34,10 +34,11 @@ gcode:
     G90
 
     # Handle filament sensor (if applicable)
-    {% if params.T|int > 0 and params.T|int < 5 %}
+    {% if 'T' in params %}
+     {% if params.T|int > 0 and params.T|int < 5 %}
       SET_FILAMENT_SENSOR SENSOR=encoder_t{params.T} ENABLE=0
+     {% endif %}
     {% endif %}
-
     # Turn off heaters and fan (optional, commented out)
     #TURN_OFF_HEATERS
     #M106 S0 
