--- a/Klipper/config/smart_filament_sensor.cfg
+++ b/Klipper/config/smart_filament_sensor.cfg
@@ -65,7 +65,7 @@ runout_gcode: FILAMENT_ISRUNOUT
 
 [filament_motion_sensor encoder_t1]
 detection_length: 10
-extruder: extruder
+extruder: extruder1
 #switch_pin: ^!PE4
 switch_pin: ^!EBB1: PB5
 pause_on_runout: false
